Adding example flutter app
